--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,11 +8,14 @@ pipeline {
 
     stages {
        stage('Clone Repository') {
-            steps {
-                    echo 'Starting Git Clone stage'
-                     git branch: 'main' , url: 'https://${GIT_CREDENTIALS_ID}@github.com/TheDotStore/thelegaltruth.git', credentialsId: 'github_legalease'
-                    echo 'Finished Git Clone stage'
+             steps {
+                echo 'Starting Git Clone stage'
+                withCredentials([string(credentialsId: 'github-pat', variable: 'GITHUB_PAT')]) {
+                    git branch: 'main',
+                        url: "https://${GITHUB_PAT}@github.com/TheDotStore/thelegaltruth.git"
                 }
+                echo 'Finished Git Clone stage'
+            }
         }
         stage('Build') {
             steps {
